# ephemeris-compute-de430

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  dataFetch.py  docker-compose.yml  prettymake  setup.sh
src/: asteroids.c  main.c
src/coreUtils/: asciiDouble.c  asciiDouble.h  errorReport.c  errorReport.h  makeRasters.c  makeRasters.h  strConstants.h
src/ephemCalc/: constellations.c  constellations.h  jpl.c  jpl.h  magnitudeEstimate.c  magnitudeEstimate.h  meeus.c  meeus.h  orbitalElements.c  orbitalElements.h
src/listTools/: ltDict.c  ltDict.h  ltList.c  ltList.h  ltMemory.c  ltMemory.h  ltStringProc.c  ltStringProc.h
src/mathsTools/: julianDate.c  julianDate.h  precess_equinoxes.c  precess_equinoxes.h  sphericalAst.c  sphericalAst.h
src/settings/: settings.c  settings.h
